CORE-32166: Fixed RTL and margin issues on PUDO collection list/selected collection.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-checkout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-pudo-aramex/component/_pudo-checkout.scss
@@ -11,6 +11,11 @@
       }
     }
   }
+
+  .store-open-hours-list,
+  .store-delivery-time {
+    margin-top: 0.625rem;
+  }
 }
 
 .spc-checkout-delivery-information {
