--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/contact-us/component/_contact.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/contact-us/component/_contact.scss
@@ -290,11 +290,13 @@
     label {
       text-transform: lowercase;
     }
-  }
-}
 
-.webform-submission-alshaya-contact-form .mobile-number-field .mobile-input--wrapper .country-select {
-  @include country-select;
+    .mobile-input--wrapper {
+      .country-select {
+        @include country-select;
+      }
+    }
+  }
 }
 
 .webform-submission-alshaya-contact-form .mobile-number-field .mobile-input--wrapper {
