Revert "[6.6.0] CORE-32877: Fixing broken print page on confirmation in mobile."

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/alshaya-react-animate/component/_animate.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/alshaya-react-animate/component/_animate.scss
@@ -7,7 +7,7 @@ body:not(.ie) {
 
     &.notInMobile {
       @include breakpoint($only-mobile) {
-        animation: none !important;
+        animation: none;
       }
     }
   }
@@ -48,7 +48,7 @@ body:not(.ie) {
 
     &.notInMobile {
       @include breakpoint($only-mobile) {
-        animation: none !important;
+        animation: none;
       }
     }
   }
@@ -97,7 +97,7 @@ body:not(.ie) {
 
     &.notInMobile {
       @include breakpoint($only-mobile) {
-        animation: none !important;
+        animation: none;
       }
     }
   }
