--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full.html.twig
@@ -115,11 +115,7 @@ set classes = [
                             {{ content.short_desc.label }}
                           </div>
                         {% endif %}
-                        {% if content.short_desc.value|render %}
-                          <div class="desc-value">
-                            {{ content.short_desc.value }}
-                          </div>
-                        {% endif %}
+                        <div class="desc-value">#rcs.product._self|short_description#</div>
                       </div>
                       {% for desc in content.description %}
                         {% if desc.value|render %}
@@ -138,15 +134,17 @@ set classes = [
                       {% endfor %}
                       {{ content.legal_notice }}
                     </div>
-                    {% if content.description %}
-                      {% if content.read_more_style.value|render %}
-                        <span class="read-more-description-link" style="{{ content.read_more_style.value }}">{{ 'Read more'|t }}</span>
-                        <span class="read-more-description-link-mobile" style="{{ content.read_more_style.value }}">{{ 'Read more'|t }}</span>
-                      {% else %}
+{#@todo how to do conditions?#}
+{#                    {% if content.description %}#}
+{#                        @todo How to get style?#}
+{#                      {% if content.read_more_style.value|render %}#}
+{#                        <span class="read-more-description-link" style="{{ content.read_more_style.value }}">{{ 'Read more'|t }}</span>#}
+{#                        <span class="read-more-description-link-mobile" style="{{ content.read_more_style.value }}">{{ 'Read more'|t }}</span>#}
+{#                      {% else %}#}
                         <span class="read-more-description-link">{{ 'Read more'|t }}</span>
                         <span class="read-more-description-link-mobile">{{ 'Read more'|t }}</span>
-                      {% endif %}
-                    {% endif %}
+{#                      {% endif %}#}
+{#                    {% endif %}#}
                   </div>
                 </div>
               </div>
@@ -158,21 +156,19 @@ set classes = [
                   <span class="close"></span>
                   <h2 class="field__label">{{ 'Product Description'|t }}</h2>
                   <div class="field__content">
-                    {% for desc in content.description  %}
-                      {% if desc.value|render %}
+{#                    @todo how to get label?#}
+{#                    {% for desc in content.description  %}#}
+{#                      {% if desc.value|render %}#}
                         <div class="desc-wrapper">
-                          {% if desc.label|render %}
+{#                          {% if desc.label|render %}#}
                             <div class="desc-label">
                               {{ desc.label }}
                             </div>
-                          {% endif %}
-
-                          <div class="desc-value">
-                            {{ desc.value }}
-                          </div>
+{#                          {% endif %}#}
+                          <div class="desc-value">#rcs.product.description.html#</div>
                         </div>
-                      {% endif %}
-                    {% endfor %}
+{#                      {% endif %}#}
+{#                    {% endfor %}#}
                     {{ content.legal_notice }}
                   </div>
                 </div>
