CORE-40520: Fixed merge conflict in hm rcs transac module. Fixed merge conflict with develop,

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-product-gallery-magazine.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-product-gallery-magazine.handlebars
@@ -59,7 +59,7 @@
               </ul>
             {{/if}}
             {{! @todo Aggregate description as in modules/brands/alshaya_hm/src/EventSubscriber/ProductInfoRequestedEventSubscriber.php:168 }}
-            {{{ description }}}
+            {{{ description.html }}}
           </div>
         </div>
 
