CORE-41653: Fixed eGift landing page buttons styling issues (DH).

--- a/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/egift-landing-page/component/_egift-balance-check-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/egift-landing-page/component/_egift-balance-check-popup.scss
@@ -2,19 +2,38 @@
   .popup-content.egift-balance-check-content {
     .egift-balance-check-form {
       .egift-button {
-        color: $primary_brand_button;
-        border-color: $primary_brand_button;
+        @include button-brand;
+
+        font-family: $dh-semibold;
+
+        &:hover {
+          background: $primary_brand_button;
+          border: none;
+          transition: none;
+        }
       }
     }
 
     .egift-balance-response {
       .egift-topup-btn-wrapper {
         button {
-          color: $primary_brand_button;
-          border-color: $primary_brand_button;
+          @include button-brand;
+
+          font-family: $dh-semibold;
+
+          &:hover {
+            background: $primary_brand_button;
+            border: none;
+            transition: none;
+          }
 
           &:last-child {
-            color: $primary_brand_button;
+            @include btn;
+
+            &:hover {
+              border: none;
+              transition: none;
+            }
           }
         }
       }
