--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2268,6 +2268,7 @@ $hm-points-block-tier-progress-active: $cherry;
 
 // Hello member QR code
 $hm-qr-code-redeem-txt: $grey-light;
+$hm-qr-code-bg: $white-three;
 
 // Hello Member benefit block
 $hm-my-offers-bg: $white-three;
@@ -2278,3 +2279,10 @@ $hm-history-points-light-title: $greyish;
 $hm-points-expiry-accordion-bg: $white-smoke;
 $hm-points-expiry-accordion-title: $error-red;
 $hm-points-expiry-accordion-icon: $error-red;
+
+// Hello member benefit landing page.
+$hm-benefit-expiry-txt: $grey-light;
+$hm-benefit-description-bg: $white-smoke-light;
+$hm-benefit-description-txt: $grey-light;
+$hm-benefit-description-heading-txt: $mothercare-black;
+$hm-benefit-Tnc-txt: $grey-light;
