--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -854,3 +854,4 @@ $hm-history-points-light-title: $silver-chalice;
 // Hello member history point
 $hm-points-expiry-accordion-title: $hnm-red;
 $hm-points-expiry-accordion-icon: $hnm-red;
+$hm-benefit-Tnc-txt: $silver-chalice;
