DIG-9420: Order details page theming fixes.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
@@ -881,6 +881,12 @@
         }
       }
     }
+
+    &.vat-row {
+      .warm--white {
+        background: unset;
+      }
+    }
   }
 
   .address--contact {
