--- a/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -12,7 +12,7 @@
       margin-#{$left}: 0;
       border: 1px solid $pdp_size_option_border;
       text-align: center;
-      padding: rem(12);
+      padding: rem(9.6) rem(12);
       font-size: rem(10);
       color: $pdp_size_option_text;
       line-height: 1;
