--- a/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/plp-add-to-cart/component/_product-size.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/plp-add-to-cart/component/_product-size.scss
@@ -4,6 +4,13 @@
       padding: rem(9.6) rem(12);
       font-size: rem(10);
       height: auto;
+
+      &.disabled {
+        cursor: text;
+        border-color: $plp-quick-view-product-size-text-disabled;
+        color: $plp-quick-view-product-size-text-disabled;
+        pointer-events: none;
+      }
     }
   }
 }
