--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
@@ -627,6 +627,9 @@ $plp-quick-view-product-size-border: $_black_two;
 $plp-quick-view-product-size-border-hover: $_black_two;
 $plp-quick-view-product-size-text: $_black_two;
 
+// PLP Quick view drawer.
+$plp-quick-view-product-size-text-disabled: $white;
+
 // Sofa and sectional.
 $sofa-sectional-title: $_black_two;
 $sofa-sectional-select-border: $_black_two;
