CORE-42648: Fixed wishlist icon not appearing on mobile when supercategory enabled (AEO).

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/sub-brand-logo/component/_sub-brand-header.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/sub-brand-logo/component/_sub-brand-header.scss
@@ -47,6 +47,12 @@ body.sub-brand-logo {
       .c-menu-primary .menu--mobile-navigation {
         z-index: 14;
       }
+
+      &:not(.super-category-enabled) {
+        .c-menu-primary .menu--mobile-navigation {
+          z-index: unset;
+        }
+      }
     }
 
     &.frontpage {
