--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/wishlist/component/_wishlist-header.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/wishlist/component/_wishlist-header.scss
@@ -34,6 +34,12 @@ body.wishlist-enabled {
           }
         }
       }
+
+      &:not(.frontpage):not(.super-category-enabled) {
+        #wishlist-header-wrapper {
+          #{$right}: rem(128);
+        }
+      }
     }
   }
 }
