--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2287,3 +2287,8 @@ $hm-benefit-description-bg: $white-smoke-light;
 $hm-benefit-description-txt: $grey-light;
 $hm-benefit-description-heading-txt: $mothercare-black;
 $hm-benefit-Tnc-txt: $grey-light;
+
+// Hello member otp popup
+$hm-opt-input-bg: $white-five;
+$hm-opt-input-border: $egift-gray;
+$hm-opt-input-focus-border: $mothercare-black;
