CORE-41887: error msg color changed.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -29,6 +29,12 @@
 
     .error {
       padding-top: 0;
+      color: $primary_input_inline_error !important;
+      background: $primary_bg !important;
+    }
+
+    #input-otp-error {
+      padding-top: rem(5);
     }
 
     .mobile-input--wrapper {
