CORE-42649: PDP hello member points earned UI.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2287,3 +2287,6 @@ $hm-benefit-description-bg: $white-smoke-light;
 $hm-benefit-description-txt: $grey-light;
 $hm-benefit-description-heading-txt: $mothercare-black;
 $hm-benefit-Tnc-txt: $grey-light;
+
+// hello member pdp
+$hm-pdp-points-earned-txt: $cherry;
