CORE-42696: hello accuured points SPC.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -855,3 +855,6 @@ $hm-history-points-light-title: $silver-chalice;
 $hm-points-expiry-accordion-title: $hnm-red;
 $hm-points-expiry-accordion-icon: $hnm-red;
 $hm-benefit-Tnc-txt: $silver-chalice;
+
+// hello member SPC
+$hm-accured-points-txt: $hnm-red;
