--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
@@ -6,6 +6,14 @@
       font-size: 0.525rem;
     }
   }
+
+  .spc-order-summary-item {
+    &:last-child {
+      .spc-value {
+        color: $hm-accured-points-txt
+      }
+    }
+  }
 }
 
 .spc-order-summary-order-preview,
