CORE-42696: removing last child.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
@@ -8,9 +8,9 @@
   }
 
   .spc-order-summary-item {
-    &:last-child {
-      .spc-value {
-        color: $hm-accured-points-txt
+    .spc-value {
+      &.hm-accured-points {
+        color: $hm-accured-points-txt;
       }
     }
   }
