--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-sku-base-form.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-sku-base-form.handlebars
@@ -1,7 +1,7 @@
 {{#*inline "renderSelectList"}}
-  <div class="js-form-item form-item js-form-type-select form-type-select js-form-item-configurables-{{this.data_configurable_code}} form-item-configurables-{{this.data_configurable_code}} {{ wrapperClass }}">
-    <select id="{{ this.id }}" class="form-select required valid {{ this.class }}" name="{{ this.name }}" data-configurable-code="{{ this.data_configurable_code }}" data-default-title="{{ this.data_default_title }}" data-selected-title="{{ this.data_selected_title }}" data-drupal-selector="{{ this.data_drupal_selector }}" aria-require="{{ this.aria_require }}" aria-invalid="{{ this.aria_invalid }}">
-      <option selected="selected" disabled="disabled">{{ this.select_option_label }}</option>
+  <div class="js-form-item form-item js-form-type-select form-type-select js-form-item-configurables-{{cleanCssIdentifier this.data_configurable_code}} form-item-configurables-{{cleanCssIdentifier this.data_configurable_code}} {{ wrapperClass }} {{ hiddenClass }}">
+    <select data-configurable-code="{{ this.data_configurable_code }}" data-default-title="{{ this.data_default_title }}" data-selected-title="{{ this.data_selected_title }}" class="{{ this.class }} form-select required" data-drupal-selector="{{ this.data_drupal_selector }}" data-msg-required="{{ this.data_msg_required }}" id="{{ this.id }}" name="{{ this.name }}" required="{{ this.required }}" aria-required="{{ this.aria_require }}" aria-invalid="{{ this.aria_invalid }}">
+      <option value="" selected="selected" disabled="disabled">{{ this.select_option_label }}</option>
       {{#each this.select_options}}
         <option value="{{ this.value }}">{{ this.text }}</option>
       {{/each}}
