--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
@@ -42,7 +42,7 @@
         {% block productBrand %}
         {% endblock %}
 
-        <h1><span>#rcs.product.name#</span></h1>
+        <h1>#rcs.product._self|name#</h1>
 
         {% block pricePrefix %}
         {% endblock %}
