--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full.html.twig
@@ -34,7 +34,7 @@ set classes = [
           {% block productBrand %}
           {% endblock %}
 
-          <h1><span class="field field-product-name">#rcs.product._self|name#</span></h1>
+          <h1>#rcs.product._self|name#</h1>
 
           {% block pricePrefix %}
           {% endblock %}
