--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
@@ -269,7 +269,12 @@ set classes = [
   {% endblock %}
 
 </article>
-<div id="dy-recommendation"></div>
+
+{% if dynamicYieldPdpDivs is defined and dynamicYieldPdpDivs %}
+  {% for i in range(1, dynamicYieldPdpDivs) %}
+    <div id="dy-recommendation-pdp-{{ i }}"></div>
+  {% endfor %}
+{% endif %}
 
 {% if content.reviews_section %}
   {% if bazaarvoice_strings %}
