--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
@@ -91,7 +91,9 @@
   }
 
   .c-menu-secondary {
-    background: $header_super_category_enabled_bg;
+    @include breakpoint($desktop) {
+      background: $header_super_category_enabled_bg;
+    }
   }
 
   @include breakpoint($upto-desktop) {
@@ -148,11 +150,18 @@
       }
 
       .one {
+        align-items: center;
+        display: inline-flex;
+        justify-content: center;
         width: 50.5%;
         padding: 1.1rem 0.5rem;
+        height: rem(60);
       }
 
       .one.shop {
+        align-items: center;
+        display: inline-flex;
+        justify-content: center;
         width: 49.5%;
       }
     }
@@ -226,6 +235,7 @@
   .main--menu ul.menu--one__list {
     @include breakpoint($only-mobile) {
       width: calc(100% - 2.8125rem);
+      top: rem(120);
     }
   }
 
