CORE-53: Registered User || Mobile number field validation error text overlapping.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -39,12 +39,17 @@
 
     .mobile-input--wrapper {
       input {
-        background-color: $hm-registration-fields-bg;
+        background-color: $hm-registration-fields-bg !important;
 
         ~ label:not(.active-label) {
           color: $hm-registration-labels-txt !important;
         }
       }
+    }
+
+    .mb-verifier {
+      color: $hm-registration-labels-txt;
+      padding-top: rem(16);
     }
   }
 }
