--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/algolia-search/component/_algolia-react-search-page.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/algolia-search/component/_algolia-react-search-page.scss
@@ -290,7 +290,7 @@
 
   .c-products__item {
     .price-currency {
-      margin-#{$right}: 0.1875rem;
+      margin-right: rem(3);
     }
 
     .special--price {
