--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/egift-landing-page/component/_egift_one-row-two-col.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/egift-landing-page/component/_egift_one-row-two-col.scss
@@ -1,26 +1,29 @@
 .egift-landing-page {
-  .field--name-field-1-row-2-col {
+  .paragraph--type--_-row-2-col {
     .field--name-field-1-row-2-col {
-      .check-balance-wrapper {
-        .checkbalance-title {
-          font-family: $hnm-demibold;
-        }
-
-        #check-balance-button {
-          & > button {
+      .field--name-field-1-row-2-col {
+        .check-balance-wrapper {
+          .checkbalance-title {
             font-family: $hnm-demibold;
           }
-        }
-      }
 
-      .paragraph--type--image-title-subtitle {
-        .field--name-field-title {
-          font-family: $hnm-demibold;
+          #check-balance-button {
+            & > button {
+              font-family: $hnm-demibold;
+              text-transform: unset;
+            }
+          }
         }
 
-        .field--name-field-button-link {
-          .field--name-field-button-link {
+        .paragraph--type--image-title-subtitle {
+          .field--name-field-title {
             font-family: $hnm-demibold;
+          }
+
+          .field--name-field-button-link {
+            .field--name-field-button-link {
+              font-family: $hnm-demibold;
+            }
           }
         }
       }
