CORE-41688: eGift | H&M | Prod | CTA button swapping.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/egift-landing-page/component/_egift_banner_block.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/egift-landing-page/component/_egift_banner_block.scss
@@ -8,6 +8,10 @@
 
     .paragraph_banner_buttons {
       .field--name-field-links {
+        @include breakpoint($tablet) {
+          flex-direction: row-reverse;
+        }
+
         .field--name-field-links {
           a {
             font-family: $hnm-demibold;
