--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-details.scss
@@ -300,3 +300,18 @@ html[lang=ar] {
     }
   }
 }
+
+.order-detail,
+.block-alshaya-user-recent-orders {
+  .user__order--detail {
+    div.order-item-row.delivered-items,
+    tr.order-item-row.delivered-items,
+    div.order-item-row.cancelled-items,
+    tr.order-item-row.cancelled-items {
+      > div,
+      td {
+        text-transform: uppercase;
+      }
+    }
+  }
+}
