--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -828,3 +828,4 @@ $egift-accordion-bg: $primary_bg;
 
 // Online Returns
 $online-return-eligibility-button-txt: $hnm-black-three;
+$online-return-dark-txt: $hnm-black-three;
