--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2250,3 +2250,7 @@ $online-return-status-red-label: $speech-red;
 $online-return-print-button-bg: $white-five;
 $online-return-status-green-label: $light-green;
 $online-return-status-orange-label: $red-orange;
+$online-return-dark-txt: $brownish-grey;
+$online-return-disable-button-bg: $white;
+$online-return-confirmation-note-txt: $greyish;
+$online-return-confirmation-border: $_gray_222;
