--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
@@ -89,13 +89,7 @@ set classes = [
 
           {# Delivery options will load if express delivery enabled. #}
           {% if content.delivery_options %}
-            <div class="express-delivery {{ content.express_delivery_class }}">
-            {% for key,delivery_option in content.delivery_options %}
-              <div class="express-delivery-text {{ key }} {{ delivery_option.status }}">
-                <span>{{ delivery_option.label }}</span>
-              </div>
-            {% endfor %}
-            </div>
+            <div id="sdd-ed-labels"></div>
           {% elseif content.same_day_delivery_text and content.delivery_options is empty %}
             <div class="same-day-delivery">
               <div class="same-day-content">
