CORE-41688: Button width fix.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/egift-landing-page/component/_egift_one-row-two-col.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/egift-landing-page/component/_egift_one-row-two-col.scss
@@ -26,4 +26,12 @@
       }
     }
   }
+  
+  .c-content__container {
+    .field--name-field-1-row-2-col {
+      .field__items {
+        width: auto;
+      }
+    }
+  }
 }
