CORE-42850: Cnc spacing fix in CORE.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_product-detail.scss
@@ -1167,6 +1167,7 @@
 
     .google-store-location {
       font-weight: bold;
+      padding: 0 rem(4);
 
       @include u-visibility(inline);
     }
