CORE-41854: Restyling after custom marker implementation, replaced TBS icon (CORE).

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/store-finder/component/_store-finder.scss
@@ -41,6 +41,7 @@
 .geolocation-common-map-container {
   [aria-hidden=true] {
     color: $store_finder_map_marker_text !important;
+    padding-top: rem(17);
     font-weight: bold;
   }
 }
