--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
@@ -60,6 +60,12 @@
     }
   }
 
+  .geolocation-common-map-container {
+    [aria-hidden="true"] {
+      padding-bottom: rem(18);
+    }
+  }
+
   .pager__item {
     list-style: none;
   }
