CORE-0056: [sign up]-Add more , get more section not coming as per design.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -4,6 +4,12 @@
   .mobile-otp-wrapper {
     padding: 0 rem(20) rem(28);
 
+    .field--type-mobile-number {
+      #user-form & {
+        margin-top: 0;
+      }
+    }
+
     #hello-member-send-otp {
       .btn-wrapper {
         position: relative;
