--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2260,6 +2260,7 @@ $hm-content-link: $black-two;
 $hm-registration-accordion-bg: $whisper;
 $hm-registration-fields-bg: $whisper;
 $hm-registration-labels-txt: $grey-light;
+$hm-accordion-txt: $brownish-grey;
 
 // Hello Member points block
 $hm-points-block-bg: $whisper;
