CORE-9950: The 250 Points should have a space in between.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
@@ -25,6 +25,10 @@
       font-size: rem(27);
       letter-spacing: 1.35px;
       font-family: $alshaya-bold;
+
+      span {
+        margin-#{$right}: rem(8);
+      }
     }
 
     .my-points-details {
