CORE-9949: The date format is wrong in the benefits, even the expires keyword is missing.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_benefits.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_benefits.scss
@@ -65,6 +65,7 @@
     text-align: center;
     font-family: $alshaya-bold;
     background: $hm-my-offers-bg;
+    min-height: rem(366);
 
     @include breakpoint($only-mobile) {
       width: rem(250) !important;
