CORE-41837: COS | PROD | eGift Tab misalignment.

--- a/docroot/themes/custom/transac/alshaya_cos_stores/sass/components/mega-menu/_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/sass/components/mega-menu/_menu.scss
@@ -24,7 +24,7 @@
       &.menu--one__list-item {
         .menu__link {
           font-size: 0.875rem;
-          text-transform: capitalize;
+          text-transform: none;
         }
 
         &:nth-child(2) {
