--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
@@ -487,7 +487,7 @@ header {
           z-index: 100;
           margin-top: -1px;
           font-size: 1rem;
-          text-transform: capitalize;
+          text-transform: none;
           font-family: $hnm-regular;
           color: $mm_l1_link;
         }
