--- a/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/egift-landing-page/component/_egift_accordian_block.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/egift-landing-page/component/_egift_accordian_block.scss
@@ -1,6 +1,8 @@
 .egift-landing-page {
   .c-accordion-delivery-option-parent {
     .c-accordion__title {
+      background-color: #eee;
+      
       .ui-accordion-header-icon {
         display: none;
       }
