DIG-9049: Cherry-pick AEO brand theming from develop to uat.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
@@ -1186,8 +1186,8 @@
         padding: rem(38) 0 rem(8) !important;
         font-size: rem(18);
         line-height: rem(22);
-        text-transform: uppercase;
         font-family: $alshaya-bold;
+        color: $page_title;
 
         div {
           margin-bottom: 0;
