--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2252,3 +2252,7 @@ $online-return-status-green-label: $light-green;
 $online-return-status-orange-label: $red-orange;
 $online-return-cancellation-reason: $error-red;
 $online-return-disabled-txt: $white-five;
+$online-return-dark-txt: $brownish-grey;
+$online-return-disable-button-bg: $white;
+$online-return-confirmation-note-txt: $greyish;
+$online-return-confirmation-border: $_gray_222;
