--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
@@ -88,9 +88,8 @@ set classes = [
           <div class="free-gift-promotions free-gift-promotions-full-view-mode">{% if content.free_gift_promotions %}{{ content.free_gift_promotions }}{% endif %}</div>
 
           {# Delivery options will load if express delivery enabled. #}
-          {% if content.delivery_options %}
-            <div id="sdd-ed-labels"></div>
-          {% elseif content.same_day_delivery_text and content.delivery_options is empty %}
+          <div id="sdd-ed-labels"></div>
+          {% if content.same_day_delivery_text and content.delivery_options is empty %}
             <div class="same-day-delivery">
               <div class="same-day-content">
                 <p>{{ content.same_day_delivery_text }}</p>
