--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-fullwidth-layout/component/_megamenu-fullwidth-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-fullwidth-layout/component/_megamenu-fullwidth-layout.scss
@@ -1,9 +1,58 @@
 @include breakpoint($desktop) {
   .block-alshaya-main-menu.megamenu-fullwidth-layout {
-    // Making the height of the mengamenu dynamic according to the inner content height
-    li.menu--one__list-item {
-      ul.menu--two__list {
-        height: auto !important;
+    max-width: none;
+
+    ul.menu--one__list {
+      padding: 0;
+      margin: 0 auto;
+
+      li.menu--one__list-item {
+        ul.menu--two__list {
+          // Making the height of the mengamenu dynamic according to the inner content height
+          height: auto !important;
+          justify-content: center;
+          padding: rem(20) 0 0;
+
+          .menu__links__wrapper {
+            max-width: rem(1218);
+            width: 100%;
+            padding: 0;
+
+            .column {
+              max-width: rem(210);
+              min-width: 0;
+              width: 100%;
+
+              &:last-child {
+                .menu--two__list-item {
+                  padding-#{$right}: 0;
+                }
+              }
+
+              &:not(:last-child) {
+                margin-#{$right}: rem(42);
+              }
+
+              .menu--two__list-item {
+                padding-#{$left}: rem(20);
+
+                &:last-child {
+                  padding-bottom: rem(46);
+                }
+
+                .menu__list {
+                  .menu--three__list-item {
+                    margin-#{$right}: 0;
+
+                    &:last-child {
+                      padding-bottom: 0;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
